Feat: Added cookie banner

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script
+      id="Cookiebot"
+      src="https://consent.cookiebot.com/uc.js"
+      data-cbid="ba4eb3d3-4d3f-4cec-b188-79826c75d49b"
+      data-blockingmode="auto"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <script
+    id="CookieDeclaration"
+    src="https://consent.cookiebot.com/ba4eb3d3-4d3f-4cec-b188-79826c75d49b/cd.js"
+    type="text/javascript"
+    async
+  ></script>
 </html>
