--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     ></script>
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQA588XGy-81RhTNbu6N2rQfjK8LMqeik"></script>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
