Feat: Added user agent data for conditional styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Super Trip Planner</title>
     <script
       id="Cookiebot"
       src="https://consent.cookiebot.com/uc.js"
@@ -14,8 +14,8 @@
     ></script>
   </head>
   <body>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQA588XGy-81RhTNbu6N2rQfjK8LMqeik"></script>
     <div id="app"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQA588XGy-81RhTNbu6N2rQfjK8LMqeik"></script>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://third-party-script-doing-too-much.glitch.me/script.js"></script>
   </body>
