Feat: fixes for build + new features

--- a/index.html
+++ b/index.html
@@ -11,21 +11,33 @@
     <script
       id="Cookiebot"
       src="https://consent.cookiebot.com/uc.js"
-      data-cbid="ba4eb3d3-4d3f-4cec-b188-79826c75d49b"
+      data-cbid="d4dae4aa-a585-4605-b5be-ec4cb92e5d00"
       data-blockingmode="auto"
       type="text/javascript"
     ></script>
+    <!-- <script
+      id="cookieyes"
+      type="text/javascript"
+      src="https://cdn-cookieyes.com/client_data/471dd49f588c21cbd13176f3/script.js"
+    ></script> -->
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-TR995C0FHY"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-TR995C0FHY');
+  </script>
   <body>
     <div id="app"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQA588XGy-81RhTNbu6N2rQfjK8LMqeik"></script>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://third-party-script-doing-too-much.glitch.me/script.js"></script>
-    <!-- <script
-      id="CookieDeclaration"
-      src="https://consent.cookiebot.com/ba4eb3d3-4d3f-4cec-b188-79826c75d49b/cd.js"
-      type="text/javascript"
-      async
-    ></script> -->
   </body>
 </html>
